# archivist-desktop

./: .gitignore  ARCHIVIST-NODE-API.md  CICD-CONTEXT.md  CLAUDE-FULL.md  CLAUDE.md  HYBRID-SYNC-ANALYSIS.md  MCP-REMOTE-TESTING.md  P2P-TESTING-GUIDE.md  P2P-TESTING-SUMMARY.md  README.md  SECURITY.md  TESTING-PLAN.md  archivist-desktop-ui-ux-overhaul.md  index.html  package.json  pnpm-lock.yaml  release-progress.md  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
e2e/: helpers.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: 01-onboarding.spec.ts  02-dashboard.spec.ts  03-files.spec.ts  04-logs.spec.ts  05-settings.spec.ts  06-devices.spec.ts  08-media-download.spec.ts
scripts/: download-sidecar.sh  launch-cdp-dev.ps1  run-e2e.ps1
sidecars/: README.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: intro.webm
src-tauri/scripts/: nsis-hooks.nsi  postinst.sh
src-tauri/sidecars/: README.md
src-tauri/src/: error.rs  features.rs  lib.rs  main.rs  node_api.rs  state.rs
src-tauri/src/commands/: files.rs  marketplace.rs  mod.rs  node.rs  peers.rs  streaming.rs  sync.rs  system.rs  wallet.rs
src-tauri/src/services/: backup.rs  backup_daemon.rs  binary_manager.rs  config.rs  files.rs  manifest_server.rs  marketplace.rs  media_download.rs  media_streaming.rs  mod.rs  node.rs  peers.rs  sync.rs  wallet.rs
src-tauri/tests/: integration_test.rs
src/components/: ErrorState.tsx  IntroModal.tsx  NavAccordion.tsx  NextSteps.tsx
src/hooks/: useFeatures.ts  useIntroModal.ts  useMediaStreaming.ts  useNode.ts  useOnboarding.ts  usePeers.ts  useSoundNotifications.ts  useSync.ts  useWallet.ts
src/lib/: api.ts  cidValidation.ts  contracts.ts  features.ts  tauri.ts
src/pages/: AddDevice.tsx  Dashboard.tsx  Devices.tsx  Files.tsx  Logs.tsx  MediaDownload.tsx  MediaPlayer.tsx  Onboarding.tsx  Peers.tsx  Settings.tsx  Sync.tsx
src/styles/: AddDevice.css  App.css  BackupServer.css  Devices.css  ErrorState.css  IntroModal.css  Logs.css  MediaDownload.css  MediaPlayer.css  NextSteps.css  Onboarding.css  index.css
src/test/: MediaDownload.test.tsx  example.test.tsx  useMediaDownload.test.ts
